@@ -1,0 +1,8 @@
+#!/bin/sh
+#
+# $FreeBSD$
+
+case " $@ " in
+*" --version "*) echo "m4 (GNU M4) 1.4.18" ;;
+*) exec m4 -g $@ ;;
+esac
